centos-ansible-k8s-1.15.10/4_application/kubernetes-dashboard/k8s-dashboard-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ui
  namespace: kubernetes-dashboard
spec:
  tls:
  - hosts: 
    - dashboard.shaun.io
    secretName: kubernetes-dashboard-tls
  rules:
  - host: dashboard.shaun.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443

# ---

# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: dashboard-ui
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: Host(`dashboard.shaun.io`)
#     kind: Rule
#     services:
#     - name: kubernetes-dashboard
#       port: 443
#   tls:
#     secretName: kubernetes-dashboard-tls
